--- a/app/src/main/res/layout/activity_inside_rooom.xml
+++ b/app/src/main/res/layout/activity_inside_rooom.xml
@@ -1,59 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="money.cache.grex.InsideRooomActivity">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="match_parent"
+                                             tools:context="money.cache.grex.InsideRooomActivity">
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/btn_inside_rm_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:clickable="true"
         app:fabSize="mini"
-        app:srcCompat="@drawable/_back_26"
-        tools:layout_editor_absoluteX="41dp"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/_back_26"/>
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="NAME_OF_THE_ROOM"
+        android:textAlignment="center"
+        android:textAppearance="@android:style/TextAppearance.Material.Title"
+        android:textColor="?attr/colorAccent"
+        android:textSize="24sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layout_top_theme"/>
 
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/relativeLayout"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@drawable/gradient_to_bottom"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp">
+        android:id="@+id/layout_top_theme"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/layout_top_bar_height"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="-2dp"
+        android:background="@drawable/gradient"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1">
 
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginLeft="0dp"
-            android:layout_marginRight="0dp"
-            android:layout_marginTop="8dp"
-            android:text="NAME_OF_THE_ROOM"
-            android:textAlignment="center"
-            android:textAppearance="@android:style/TextAppearance.Material.Title"
-            android:textColor="?attr/colorAccent"
-            android:textSize="24sp"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
     </android.support.constraint.ConstraintLayout>
 
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/relativeLayout4"
-        android:layout_width="match_parent"
+        android:id="@+id/layout_btn_toolbar"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="503dp">
+        android:layout_marginBottom="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        >
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/btn_room_photo_roll"
@@ -69,7 +71,7 @@
             app:layout_constraintRight_toLeftOf="@+id/btn_room_messaging"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.538"
-            app:srcCompat="@drawable/_photo_reel_50" />
+            app:srcCompat="@drawable/_photo_reel_50"/>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/btn_room_guests"
@@ -84,7 +86,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/btn_room_messaging"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/_user_groups_50" />
+            app:srcCompat="@drawable/_user_groups_50"/>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/btn_room_messaging"
@@ -93,43 +95,32 @@
             android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
             android:clickable="true"
+            android:translationZ="1dp"
             app:fabSize="normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/_chat_80" />
+            app:srcCompat="@drawable/_chat_80"
+            app:layout_constraintHorizontal_bias="0.501"/>
     </android.support.constraint.ConstraintLayout>
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_above="@+id/relativeLayout4"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/relativeLayout5">
-
-    </FrameLayout>
-
     <RelativeLayout
-        android:id="@+id/relativeLayout3"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/gradient"
+        android:id="@+id/layout_bottom_theme"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/layout_bottom_bar_height"
+        android:layout_marginBottom="0dp"
+        android:background="@drawable/gradient_to_bottom"
         android:translationZ="-2dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="336dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1">
 
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/relativeLayout5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/relativeLayout"
-        android:layout_centerHorizontal="true">
-
-    </RelativeLayout>
-
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
