--- a/app/src/main/res/layout/activity_user_friends.xml
+++ b/app/src/main/res/layout/activity_user_friends.xml
@@ -9,43 +9,29 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/app_top_bar"
         android:layout_width="0dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="0dp"
-        android:background="@drawable/gradient_to_bottom"
+        android:layout_height="@dimen/layout_top_bar_height"
+        android:background="@drawable/gradient"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            android:text="Your Friends"
-            android:textColor="?attr/colorAccent"
-            android:textSize="24sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
     </android.support.constraint.ConstraintLayout>
 
-    <RelativeLayout
-        android:id="@+id/app_bottom_bar"
-        android:layout_width="0dp"
-        android:layout_height="45dp"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/gradient"
-        android:translationZ="-2dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Your Friends"
+        android:textColor="@android:drawable/screen_background_light_transparent"
+        android:textSize="24sp"
+        android:translationZ="1dp"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/app_top_bar"/>
 
-    </RelativeLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/btn_user_friends_back"
@@ -57,20 +43,40 @@
         app:fabSize="mini"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/_back_26" />
+        app:srcCompat="@drawable/_back_26"
+        android:layout_marginStart="10dp"/>
+
+    <RelativeLayout
+        android:id="@+id/app_bottom_bar"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/layout_bottom_bar_thin_height"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="-14dp"
+        android:background="@drawable/gradient_to_bottom"
+        android:translationZ="-2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
+
+    </RelativeLayout>
 
     <GridView
         android:id="@+id/grid_user_friends"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:columnWidth="125dp"
-        android:numColumns="auto_fit"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="40dp"
+        android:numColumns="3"
+        android:scrollbarAlwaysDrawHorizontalTrack="false"
         app:layout_constraintBottom_toTopOf="@+id/app_bottom_bar"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/app_top_bar"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_bias="0.0"
         tools:listitem="@layout/friend_item">
 
     </GridView>
