--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="layout_top_bar_height">55dp</dimen>
+    <dimen name="layout_bottom_bar_height">85dp</dimen>
+    <dimen name="layout_bottom_bar_thin_height">40dp</dimen>
 </resources>
