--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -113,7 +113,7 @@
             app:fabSize="normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/btn_createRoom"
-            app:layout_constraintRight_toLeftOf="@+id/btn_home_room_list"
+            app:layout_constraintRight_toLeftOf="@+id/btn_home_rooms"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/_meeting_50"/>
 
@@ -196,7 +196,7 @@
             app:srcCompat="@drawable/_user_64"/>
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/btn_home_room_list"
+            android:id="@+id/btn_home_rooms"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
