--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -21,16 +21,20 @@
         android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/user_prof_top_bar"/>
+        app:layout_constraintTop_toBottomOf="@+id/user_prof_top_bar"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintLeft_creator="1" />
 
     <RelativeLayout
         android:id="@+id/user_prof_top_bar"
         android:layout_width="0dp"
-        android:layout_height="@dimen/layout_top_bar_height"
+        android:layout_height="55dp"
         android:background="@drawable/gradient"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintLeft_creator="1">
 
         <TextView
             android:layout_width="match_parent"
@@ -47,51 +51,48 @@
 
     <LinearLayout
         android:id="@+id/constraintLayout2"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/border"
         android:orientation="vertical"
-        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
-        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/user_prof_top_bar">
+        app:layout_constraintTop_toBottomOf="@+id/user_prof_top_bar"
+        tools:layout_constraintRight_creator="1"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
+        tools:layout_constraintLeft_creator="1">
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/user_prof_top_bar"
+            android:layout_gravity="center_horizontal"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_weight="1"
-            android:background="@color/accent"
+            android:background="?android:attr/colorLongPressedHighlight"
             android:outlineProvider="background"
             android:padding="1dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/_contacts_96"/>
+            app:srcCompat="@drawable/_contacts_96" />
 
         <EditText
             android:id="@+id/editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
             android:layout_weight="1"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="CURRENT_USERNAME"
             android:textAlignment="center"
-            app:layout_constraintHorizontal_bias="0.503"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            tools:layout_editor_absoluteY="220dp"/>
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="1dp" />
 
         <EditText
             android:id="@+id/editText4"
@@ -219,14 +220,12 @@
         app:srcCompat="@drawable/_save_as_80"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1"
         app:layout_constraintHorizontal_bias="0.501"/>
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
         android:layout_width="0dp"
-        android:layout_height="@dimen/layout_bottom_bar_height"
-        android:layout_marginBottom="-3dp"
+        android:layout_height="85dp"
         android:background="@drawable/gradient_to_bottom"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
