--- a/app/src/main/res/layout/activity_create_room.xml
+++ b/app/src/main/res/layout/activity_create_room.xml
@@ -145,7 +145,7 @@
         <EditText
             android:id="@+id/txt_details"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="115dp"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
@@ -154,13 +154,13 @@
             android:ems="10"
             android:hint="Details"
             android:inputType="textMultiLine"
+            android:textAlignment="textStart"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/div_pub_details"
             tools:layout_constraintLeft_creator="1"
             tools:layout_constraintRight_creator="1"
-            tools:layout_constraintTop_creator="1"
-            />
+            tools:layout_constraintTop_creator="1"/>
 
     </android.support.constraint.ConstraintLayout>
 
@@ -200,8 +200,7 @@
         app:layout_constraintRight_toRightOf="parent"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        >
+        tools:layout_constraintRight_creator="1">
 
     </RelativeLayout>
 
