--- a/app/src/main/res/layout/activity_inside_rooom.xml
+++ b/app/src/main/res/layout/activity_inside_rooom.xml
@@ -58,19 +58,34 @@
         >
 
         <android.support.design.widget.FloatingActionButton
+            android:id="@+id/btn_room_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            app:fabSize="normal"
+            app:srcCompat="@drawable/_marker_100"
+            app:layout_constraintRight_toLeftOf="@+id/btn_room_photo_roll"
+            android:layout_marginRight="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintVertical_bias="0.5"/>
+
+        <android.support.design.widget.FloatingActionButton
             android:id="@+id/btn_room_photo_roll"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
             android:clickable="true"
             app:fabSize="normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/btn_room_messaging"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.538"
+            app:layout_constraintLeft_toRightOf="@id/btn_room_location"
+            app:layout_constraintVertical_bias="0.5"
             app:srcCompat="@drawable/_photo_reel_50"/>
 
         <android.support.design.widget.FloatingActionButton
@@ -98,12 +113,12 @@
             android:translationZ="1dp"
             app:fabSize="normal"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.501"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/_chat_80"
-            app:layout_constraintHorizontal_bias="0.501"/>
+            app:srcCompat="@drawable/_chat_80"/>
     </android.support.constraint.ConstraintLayout>
 
     <RelativeLayout
@@ -113,6 +128,7 @@
         android:layout_marginBottom="0dp"
         android:background="@drawable/gradient_to_bottom"
         android:translationZ="-2dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
